# spoke

./: CLAUDE.md  index.html  package.json  plan.md  pnpm-lock.yaml  roadmap.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: filesystem.rs  keys.rs  mod.rs  secrets.rs  ssh_config.rs  terminal.rs
src-tauri/src/ssh/: client.rs  manager.rs  mod.rs  sftp.rs
src/components/: ConfirmDialog.tsx  ConnectDialog.tsx  ContextMenu.tsx  FilePickerDialog.tsx  KeyGenDialog.tsx  ResizeHandle.tsx  SftpPanel.tsx  Sidebar.tsx  TerminalArea.tsx  TerminalView.tsx
src/hooks/: terminalThemes.ts  useSftp.ts  useSshConfig.ts  useSshSession.ts  useSystemTheme.ts  useXterm.ts
src/store/: appStore.ts  secrets.ts  settings.ts
src/styles/: index.css
